linked about and home page

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="navcontainer">
         <img src="img\lambda-black.png" alt="black lambda logo" />
         <!-- <div class="nav"> -->
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Products</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
+        <a href="#">Home</a>
+        <a href="about.html">About</a>
+        <a href="#">Products</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
         <!-- </div> -->
       </div>
       <div class="jumbo">
