--- a/about.html
+++ b/about.html
@@ -10,14 +10,14 @@
       href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/about.css" />
   </head>
 
   <body>
-    <div class="container about-page">
+    <div class="aboutContainer">
       <header>
-        <div class="navcontainer">
-          <img src="img\lambda-black.png" alt="cityscape at sunset" />
+        <div class="navContainer">
+          <img src="img\lambda-black.png" alt="black lambda logo" />
           <!-- <div class="nav"> -->
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
@@ -27,7 +27,7 @@
           <!-- </div> -->
         </div>
         <div class="jumbo">
-          <img src="img/jumbo-about.png" alt="jumbo" />
+          <img src="img/jumbo-about.png" alt="cityscape at sunrise" />
         </div>
       </header>
       <section class="about">
@@ -43,35 +43,56 @@
       <section class="mid">
         <section class="strategy">
           <img src="img/about-plan.png" alt="strategy" />
-          Strategy Iterative approaches to corporate strategy foster
-          collaborative thinking to further the overall value proposition. Learn
-          More
+          <h2>Strategy</h2>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+        </section>
+        <section class="howWeWork">
+          <img src="img/about-working.png" alt="strategy" />
+          
+          <h2>How We Work</h2>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+        </section>
+
+        <section class="placesWeWork">
+          <img src="img/about-office.png" alt="strategy" />
+
+          <h2>Places We Work</h2>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+        </section>
+
+        <section class="collaboration">
+          <img src="img/about-meeting.png" alt="strategy" />
+          <h2>Collaboration</h2>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
         </section>
       </section>
-      <section class="work">
-        <img src="img/about-working.png" alt="strategy" />
+      <section class="workTogether">
 
-        How We Work Iterative approaches to corporate strategy foster
-        collaborative thinking to further the overall value proposition. Learn
-        More
+        <h2>Let's Work Together</h2>
+        <p>
+          Leverage agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+          Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </p>
       </section>
-
-      <img src="img/about-office.png" alt="strategy" />
-
-      Places We Work Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More
-
-      <img src="img/about-meeting.png" alt="strategy" />
-
-      Collaboration Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More Let's Work Together Leverage agile frameworks to provide a robust
-      synopsis for high level overviews. Iterative approaches to corporate
-      strategy foster collaborative thinking to further the overall value
-      proposition. Organically grow the holistic world view of disruptive
-      innovation via workplace diversity and empowerment.
-
       <footer>
         <nav>
           <a href="index.html">Home</a>
